# pull-request-fixer

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  FEATURES.md  FINAL_IMPLEMENTATION.md  FINAL_STATUS.md  IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  MANIFEST.in  MIGRATION_NOTES.md  PROJECT_SUMMARY.md  PR_COMMENTS.md  PR_SCANNER_UPDATE.md  README.md  RENAME_SUMMARY.md  REUSE.toml  SETUP.md  TESTING.md  action.yaml  demo.sh  pyproject.toml  test-github-pr.sh  test_blocked_pr_logic.py  test_integration.py
.github/: dependabot.yml
.github/workflows/: autolabeler.yaml  build-test-release.yaml  build-test.yaml  release-drafter.yaml  sha-pinned-actions.yaml  testing.yaml
docs/: GITHUB_PR_FIXING.md
scripts/: debug_graphql.py  diagnose_org_access.py  integration-test.sh
src/pull_request_fixer/: _version.py  blocked_pr_scanner.py  cli.py  exceptions.py  git_config.py  github_client.py  models.py  pr_file_fixer.py  pr_fixer.py  pr_scanner.py  progress_tracker.py
tests/: __init__.py  conftest.py  test_file_fixer_comprehensive.py  test_git_config.py  test_graphql_queries.py  test_pr_blocking.py  test_pr_file_fixer_404.py  test_pr_file_fixer_api.py
